--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+
+{# HEADER #}
 <html>
     <head>
         <meta charset="UTF-8">
@@ -23,43 +25,233 @@
     <div class="collapse navbar-collapse" id="navbarColor01">
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
-          <a class="nav-link active" href="#">Home
+          <a class="nav-link active" href="{{ path('app_home')}}">Home
             <span class="visually-hidden">(current)</span>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Product</a>
+          <a class="nav-link" href="{{ path('app_showall')}}">Product</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ path('app_category')}}">Category</a>
+          <a class="nav-link" href="">Category</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{{ path('app_bill')}}">Receipt</a>
         </li>
-         <li class="nav-item">
+         {# <li class="nav-item">
           <a class="nav-link" href="{{ path('app_register') }}">Registration</a>
         </li>
          <li class="nav-item">
           <a class="nav-link" href="{{ path('app_login') }}">Login</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ path('app_logout') }}">Logout</a>
+        </li> #}
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Brand</a>
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Separated link</a>
+            <a class="dropdown-item" href="#">Woman</a>
+            <a class="dropdown-item" href="#">Man</a>
           </div>
         </li>
-      </ul>
-      <form class="d-flex">
+        <form class="d-flex">
         <input class="form-control me-sm-2" type="search" placeholder="Search">
         <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
       </form>
+      </ul>
+      {# <form class="d-flex">
+        <input class="form-control me-sm-2" type="search" placeholder="Search">
+        <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+      </form> #}
+        <div class="mx-2">
+        {% if app.user %}
+        <div class="list-inline-item">
+            <a class="nav-link">{{ app.user.name }},</a>
+            {# {{ app.user.userIdentifier }} #}
+        </div>
+        <div class="list-inline-item" >
+         <a class="nav-link" href="{{ path('app_logout') }}">Logout</a>
+         </div>
+        {%  else %}
+        <li class="list-inline-item" >
+            <a class="nav-link"href="{{path('app_login')}}">Login</a>
+          </li>
+          <li class="list-inline-item">
+            <a class="nav-link" href="{{path('app_register')}}">Registration</a>
+          </li>
+      {% endif %}
+        
+        {# <li class="nav-item">
+          <a class="nav-link" href="{{ path('app_logout') }}">Logout</a>
+        </li> #}
     </div>
   </div>
 </nav>
-        {% block body %}{% endblock %}
+        {% block body %}
+        
+        {% endblock %}
+
+    {# FOOTER #}
+    <head>
+    <meta charset="UTF-8">
+    <meta name="description" content="Vinyl Template">
+    <meta name="keywords" content="Vinyl, unica, creative, html">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Shopping</title>
+
+    <!-- Google Font -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+
+    <!-- Css Styles -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
+  
+    <style>
+    h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
+    margin-top: 0;
+    margin-bottom: 0.5rem;
+    font-family: Montserrat, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    font-weight: 500;
+    line-height: 1.2;
+    color: #d4aaaa;
+    }
+    .section {
+    padding: 0rem 0;
+}
+
+    </style>
+<!-- Footer Section Begin --> 
+        
+<!-- Remove the container if you want to extend the Footer to full width. -->
+
+  <!-- Footer -->
+  <footer
+          class="text-center text-lg-start text-white"
+          style="background-color: #45526e"
+          >
+    <!-- Grid container -->
+    <div class="container p-4 pb-0">
+      <!-- Section: Links -->
+      <section class="">
+        <!--Grid row-->
+        <div class="row">
+          <!-- Grid column -->
+          <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+            <h6 class="text-uppercase mb-4 font-weight-bold">
+              Company name
+            </h6>
+            <p>
+              NKT shop is one of the top chain of fashion stores in Vietnam. Brand is built by prestige and quality
+            </p>
+          </div>
+          <!-- Grid column -->
+
+          <hr class="w-100 clearfix d-md-none" />
+
+          <!-- Grid column -->
+          <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+            <h6 class="text-uppercase mb-4 font-weight-bold">
+              Useful links
+            </h6>
+            <p>
+              <a class="text-white">Page</a>
+            </p>
+            <p>
+              <a class="text-white">Home</a>
+            </p>
+            <p>
+              <a class="text-white">Shop</a>
+            </p>
+            <p>
+              <a class="text-white">Address and Support</a>
+            </p>
+            <p>
+              <a class="text-white">Page</a>
+            </p>
+          </div>
+
+          <!-- Grid column -->
+          <hr class="w-100 clearfix d-md-none" />
+
+          <!-- Grid column -->
+      <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+            <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
+            <p><i class="bi bi-house-door"></i> Can Tho, CT 10012, VN</p>
+            <p><i class="bi bi-envelope"></i> NKTshop@gmail.com</p>
+            <p><i class="bi bi-phone"></i> + 01 234 567 88</p>
+            <p><i class="bi bi-printer"></i> + 01 234 567 89</p>
+          </div>
+          <!-- Grid column -->
+        </div>
+        <!--Grid row-->
+      </section>
+      <!-- Section: Links -->
+
+      <hr class="my-3">
+
+      <!-- Section: Copyright -->
+      <section class="p-3 pt-0">
+        <div class="row d-flex align-items-center">
+          <!-- Grid column -->
+          <div class="col-md-7 col-lg-8 text-center text-md-start">
+            <!-- Copyright -->
+            <div class="p-3">
+              © 2022 Copyright:
+              <a class="text-white" href="https://NKTshop.com/"
+                 >NKTshop.com</a
+                >
+            </div>
+            <!-- Copyright -->
+          </div>
+          <!-- Grid column -->
+
+          <!-- Grid column -->
+          <div class="col-md-5 col-lg-4 ml-lg-0 text-center text-md-end">
+            <!-- Facebook -->
+            <a
+               class="btn btn-outline-light btn-floating m-1"
+               class="text-white"
+               role="button"
+               ><i class="bi bi-facebook"></i
+              ></a>
+
+            <!-- Twitter -->
+            <a
+               class="btn btn-outline-light btn-floating m-1"
+               class="text-white"
+               role="button"
+               ><i class="bi bi-twitter"></i
+              ></a>
+
+            <!-- Google -->
+            <a
+               class="btn btn-outline-light btn-floating m-1"
+               class="text-white"
+               role="button"
+               ><i class="bi bi-google"></i
+              ></a>
+
+            <!-- Instagram -->
+            <a
+               class="btn btn-outline-light btn-floating m-1"
+               class="text-white"
+               role="button"
+               ><i class="bi bi-instagram"></i
+              ></a>
+          </div>
+          <!-- Grid column -->
+        </div>
+      </section>
+      <!-- Section: Copyright -->
+    </div>
+    <!-- Grid container -->
+  </footer>
+  <!-- Footer -->
+</div>
+<!-- End of .container -->
+
+    <!-- Footer Section End -->
     </body>
 </html>
