--- a/templates/bill/index.html.twig
+++ b/templates/bill/index.html.twig
@@ -2,19 +2,110 @@
 
 {% block title %}Hello BillController!{% endblock %}
 
+{% block stylesheets %}
+        <link rel="stylesheet" href="https://bootswatch.com/5/minty/bootstrap.css">
+{% endblock %}
+
+
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+<div class="container bootstrap snippets bootdeys">
+<div class="row">
+  <div class="col-sm-12">
+	  	<div class="panel panel-default invoice" id="invoice">
+			<hr>
+			<div class="row">
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'D:/shop_demo/src/Controller/BillController.php'|file_link(0) }}">src/Controller/BillController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'D:/shop_demo/templates/bill/index.html.twig'|file_link(0) }}">templates/bill/index.html.twig</a></code></li>
-    </ul>
+				<div class="col-xs-4 from">
+					<p class="lead marginbottom">From : NKT Shop</p>
+					<p>Can Tho</p>
+					<p>Phone: 0303-678-098</p>
+					<p>Email: NKTshop@gmail.com</p>
+				</div>
+
+				<div class="col-xs-4 to">
+					<p class="lead marginbottom">To : John Doe</p>
+					<p>425 Market Street</p>
+					<p>Suite 2200, San Francisco</p>
+					<p>California, 94105</p>
+					<p>Phone: 415-676-3600</p>
+					<p>Email: john@doe.com</p>
+
+			    </div>
+
+			    <div class="col-xs-4 text-right payment-details">
+					<p class="lead marginbottom payment-info">Payment details</p>
+					<p>Date: 14 April 2014</p>
+					<p>VAT: DK888-777 </p>
+					<p>Total Amount: $1019</p>
+					<p>Account Name: Flatter</p>
+			    </div>
+
+			</div>
+
+			<div class="row table-row">
+				<table class="table table-striped">
+			      <thead>
+			        <tr>
+			          <th class="text-center" style="width:5%">#</th>
+			          <th style="width:50%">Item</th>
+			          <th class="text-right" style="width:15%">Quantity</th>
+			          <th class="text-right" style="width:15%">Unit Price</th>
+			          <th class="text-right" style="width:15%">Total Price</th>
+			        </tr>
+			      </thead>
+			      <tbody>
+			        <tr>
+			          <td class="text-center">1</td>
+			          <td>Flatter Theme</td>
+			          <td class="text-right">10</td>
+			          <td class="text-right">$18</td>
+			          <td class="text-right">$180</td>
+			        </tr>
+			        <tr>
+			          <td class="text-center">2</td>
+			          <td>Flat Icons</td>
+			          <td class="text-right">6</td>
+			          <td class="text-right">$59</td>
+			          <td class="text-right">$254</td>
+			        </tr>
+			        <tr>
+			          <td class="text-center">3</td>
+			          <td>Wordpress version</td>
+			          <td class="text-right">4</td>
+			          <td class="text-right">$95</td>
+			          <td class="text-right">$285</td>
+			        </tr>
+			         <tr class="last-row">
+			          <td class="text-center">4</td>
+			          <td>Server Deployment</td>
+			          <td class="text-right">1</td>
+			          <td class="text-right">$300</td>
+			          <td class="text-right">$300</td>
+			        </tr>
+			       </tbody>
+			    </table>
+
+			</div>
+
+			<div class="row">
+			<div class="col-xs-6 margintop">
+				<p class="lead marginbottom">THANK YOU!</p>
+
+				<button class="btn btn-success" id="invoice-print"><i class="fa fa-print"></i> Print Invoice</button>
+				<button class="btn btn-danger"><i class="fa fa-envelope-o"></i> Mail Invoice</button>
+			</div>
+			<div class="col-xs-6 text-right pull-right invoice-total">
+					  <p>Subtotal : $1019</p>
+			          <p>Discount (10%) : $101 </p>
+			          <p>VAT (8%) : $73 </p>
+			          <p>Total : $991 </p>
+			</div>
+			</div>
+
+		  </div>
+		</div>
+	</div>
+</div>
 </div>
 {% endblock %}
