--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -480,6 +480,8 @@ font-size: 1.5rem;
   .collection__box
   {
     padding: .5rem 3rem 0;
+    margin-top: 50px;
+    margin-bottom: 100px
   }
 
   .collection__img
@@ -562,7 +564,7 @@ font-size: 1.5rem;
                 <div class="home__container bd-grid">
                     <div class="home__data">
                         <h1 class="home__title">NEW <br><span>ARRIVALS</span></h1>
-                        <a href="#featured" class="button">GO SHOPPING</a>
+                        <a href="{{ path('app_showall')}}" class="button">GO SHOPPING</a>
                     </div>
                 </div>
             </section>
@@ -571,8 +573,7 @@ font-size: 1.5rem;
             <section class="collection section">
                 <div class="collection__container bd-grid">
                     <div class="collection__box">
-                        <img src="images/shirtman.jpeg" alt="" class="collection__img">
-
+                        <img src="images/bannerman.jpg" alt="" class="collection__img">
                         <div class="collection__data">
                             <h2 class="collection__title"><span class="collection__subtitle">Men</span><br>Clothes</h2>
                             <a href="#" class="collection__view">View collection</a>
@@ -584,22 +585,21 @@ font-size: 1.5rem;
                             <h2 class="collection__title"><span class="collection__subtitle">Women</span><br>Clothes</h2>
                             <a href="#" class="collection__view">View collection</a>
                         </div>
-
-                        <img src="images/shirtwoman.jpg" alt="" class="collection__img">
+                        <img src="images/bannerwoman.jpg" alt="" class="collection__img">
                     </div>
                 </div>
             </section>
 
             <!--===== FEATURED PRODUCTS =====-->
-            <section class="featured section" id="featured">
+            {# <section class="featured section" id="featured">
                 <h2 class="section-title">FEATURED PRODUCTS</h2>
-                <a href="#" class="section-all">View All</a>
+                <a href="{{ path('app_showall')}}" class="section-all">View All</a>
 
                 <div class="featured__container bd-grid">
                     <div class="featured__product">
                         <div class="featured__box">
                             <div class="featured__new">NEW</div>
-                            <img src="images/shirt.jpg" class="featured__img" alt="">
+                            <img src="images/.jpg" class="featured__img" alt="">
                         </div>
 
                         <div class="featured__data">
@@ -607,43 +607,7 @@ font-size: 1.5rem;
                             <span class="featured__price">$29</span>
                         </div>
                     </div>
-
-                    <div class="featured__product">
-                        <div class="featured__box">
-                            <div class="featured__new">NEW</div>
-                            <img src="images/shirtman1.webp" class="featured__img" alt="">
-                        </div>
-
-                        <div class="featured__data">
-                            <h3 class="featured__name">Shirt Nice</h3>
-                            <span class="featured__price">$199</span>
-                        </div>
-                    </div>
-
-                    <div class="featured__product">
-                        <div class="featured__box">
-                            <div class="featured__new">NEW</div>
-                            <img src="images/dress1.jpg" class="featured__img" alt="">
-                        </div>
-
-                        <div class="featured__data">
-                            <h3 class="featured__name">Dress One Black</h3>
-                            <span class="featured__price">$122</span>
-                        </div>
-                    </div>
-
-                    <div class="featured__product">
-                        <div class="featured__box">
-                            <div class="featured__new">NEW</div>
-                            <img src="images/shirtwoman1.jpg" class="featured__img" alt="">
-                        </div>
-
-                        <div class="featured__data">
-                            <h3 class="featured__name">Shirt Beautifull</h3>
-                            <span class="featured__price">$99</span>
-                        </div>
-                    </div>
-                </div>
+                </div> #}
 
 
             <!--===== OFFER =====-->
@@ -652,7 +616,7 @@ font-size: 1.5rem;
                     <div class="offer__data">
                         <h2 class="offer__title">Special Offer</h2>
                         <p class="offer__description">Special offers discounts for women this week only</p>
-                        <a href="#" class="button">SHOP NOW</a>
+                        <a href="{{ path('app_showall')}}" class="button">SHOP NOW</a>
                     </div>
                 </div>
             </section>
@@ -664,4 +628,6 @@ font-size: 1.5rem;
 
 
 {% endblock %}
+
+
 
