--- a/templates/admin.html.twig
+++ b/templates/admin.html.twig
@@ -72,6 +72,10 @@
               <span class="menu-header-text">Pages</span>
             </li>
             <li class="menu-item">
+              <a  href="{{path('app_home')}}" class="menu-link menu-toggle">
+                <i class="fa-solid fa-house mx-2"></i>
+                <div>Home</div>
+              </a>
               <a href="{{path('product_show')}}" class="menu-link menu-toggle">
                 {# <i class="menu-icon tf-icons bx bx-dock-top"></i> #}
                 <i class="fa-solid fa-shirt mx-2"></i>
@@ -81,6 +85,8 @@
                 <i class="fa-solid fa-star mx-2"></i>
                 <div>Category</div>
               </a>
+              
+
             </li>
           </ul>
         </aside>
