--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -576,14 +576,14 @@ font-size: 1.5rem;
                         <img src="images/bannerman.jpg" alt="" class="collection__img">
                         <div class="collection__data">
                             <h2 class="collection__title"><span class="collection__subtitle">Men</span><br>Clothes</h2>
-                            <a href="#" class="collection__view">View collection</a>
+                            <a href="{{ path('app_showall')}}" class="collection__view">View collection</a>
                         </div>
                     </div>
 
                     <div class="collection__box">
                         <div class="collection__data">
                             <h2 class="collection__title"><span class="collection__subtitle">Women</span><br>Clothes</h2>
-                            <a href="#" class="collection__view">View collection</a>
+                            <a href="{{ path('app_showall')}}" class="collection__view">View collection</a>
                         </div>
                         <img src="images/bannerwoman.jpg" alt="" class="collection__img">
                     </div>
