--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,6 +9,9 @@
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
             <link rel="stylesheet" href="https://bootswatch.com/5/minty/bootstrap.css">
+                <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+
         {% endblock %}
 
         {% block javascripts %}
@@ -20,7 +23,7 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container-fluid">
-    <a class="navbar-brand" href="#"><img style="max-width: 100px" src=""></img></a>
+    <a class="navbar-brand" href="{{ path('app_home')}}"><img style="max-width: 100px" src="{{asset('uploads/logo.jpg')}}"></img></a>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -36,9 +39,6 @@
           <a class="nav-link" href="{{ path('app_showall')}}">Product</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="">Category</a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link" href="{{ path('app_bill')}}">Receipt</a>
         </li>
         {% if is_granted('ROLE_ADMIN') %}
@@ -46,6 +46,30 @@
           <a class="nav-link" href="{{ path('product_show')}}">Manage</a>
         </li>
         {% endif %}
+{# 
+  <div class="dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">
+                        Management
+                    </a>
+                    <div class="dropdown-menu">
+                      {% for br in brand %}
+                        <li><a class= "dropdown-item" href="{{ path('app_brand', {id:br.id})}}">{{br.namecate}}<a/> </li>
+                      {% endfor %}
+                    </div>
+                </div> #}
+
+
+
+
+      <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="dropdown" data-bs-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">Brand</a>
+          <ul class="dropdown-menu" aria-labelledby="dropdown03">
+            {% for br in brand %}
+              <li><a class= "dropdown-item" href="{{ path('app_brand', {id:br.id})}}">{{br.namecate}}<a/> </li>
+            {% endfor %}
+          </ul>
+      </li> 
 
         {# {% for br in brand %}
           <li><a class= "dropdown-item" href="{{ path('app_brand', {id:br.id})}}">{{br.namecate}}<a/> </li>
