--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -70,8 +70,13 @@
                         <button class="btn btn-lg btn-primary btn-signin "  type="submit">
                             Sign in
                         </button>
+                        
                   </div>
                 </form>
+                <div class="register collection__data">
+                            <a href="{{ path('app_register')}}" class="collection__view">Registration</a>
+                </div>
+
           </div>
         </div>
       </div>
